--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,24 @@
 *.avi
 *.data
 *.cfg
+*.log
+*.log.*
+
+# IDE 또는 편집기 설정 파일
+.vscode/
+.idea/
+
+# 스태틱 파일 및 미디어 파일
+static/
+media/
+
+# 캐시 파일 및 임시 파일
+*.pyc
+*.pyo
+*~
+*.swp
+
+# SQLite 데이터베이스 파일
+db.sqlite3
+*.sqlite3
+
